--- a/style.css
+++ b/style.css
@@ -347,6 +347,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: end;
+    margin-top: 100px;
     color: var(--white);
 }
 
